Cambios se hizo una tabla

--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
 </head>
 <body>
     <h1>Mi primer pagina de repositorio</h1>
-    
-    
+    <div class="container-main">
+        <table class="table-main">
+            <th>
+                <td>ID</td>
+                <td>Tehutle Gonzalez Alexis</td>
+                <td>HOBBIES</td>
+                <td>Jugar videojuegos, Trabajar, Salir con mis amigos</td>
+            </th>
+        </table>
+    </div>
 </body>
 </html>
